# twit

backend/: alembic.ini  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  routes.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 61317375e3ad_add_following_table.py  784d312dd371_init.py
backend/app/crud/: __init__.py  tweet.py  user.py
backend/app/schemas/: auth.py  tweet.py  user.py
backend/app/services/: auth.py  jwt.py  mail.py
frontend/: package.json
