[tool.poetry]
name = "twit-backend"
version = "0.1.0"
description = ""
authors = ["Seah Chin Ying <scy.6char@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.55.1"}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
